log
Wed 27 Mar 2024 07:00:25 PM UTC: 
 tests:  0|6
total_score: 0/70
735ad0c
Wed 27 Mar 2024 07:04:21 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
674cb60
Wed 27 Mar 2024 07:04:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96854dd
Wed 27 Mar 2024 07:11:19 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f6bda30
Wed 27 Mar 2024 07:12:49 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8a59066
Wed 27 Mar 2024 07:13:31 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
20397b4
Wed 27 Mar 2024 07:14:30 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5baff0b
Wed 27 Mar 2024 07:15:52 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
aa3587b
Wed 27 Mar 2024 07:22:28 PM UTC: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
115bdb5
Wed 27 Mar 2024 07:23:15 PM UTC: 
 list.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
adfed85
Wed 27 Mar 2024 08:01:01 PM UTC: 
 list.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:182:12: error: unused variable ‘data’ [-Werror=unused-variable]
  182 |     void * data = list -> current -> data;
      |            ^~~~
list.c:206:1: error: control reaches end of non-void function [-Werror=return-type]
  206 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
39d608a
Wed 27 Mar 2024 08:01:38 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 70/70
def34dd
